@@ -39,6 +39,13 @@
 
 #include "x-cursors.xbm"
 
+#include <directfb_version.h>
+
+#if DIRECTFB_MAJOR_VERSION < 1
+#define u32 __u32
+#define u8 __u8
+#endif
+
 static struct {
   const guchar *bits;
   int width, height, hotx, hoty;
@@ -228,7 +235,7 @@ gdk_cursor_new_for_display (GdkDisplay *display,GdkCursorType cursor_type)
         }
       else
         {
-          __u32  *dst;
+          u32  *dst;
           int     pitch;
 
           ret = temp->Lock (temp, DSLF_WRITE, (void**)&dst, &pitch);
@@ -266,13 +273,13 @@ gdk_cursor_new_for_display (GdkDisplay *display,GdkCursorType cursor_type)
                       gint  bit = x-mx + (y-my) * p;
                       gint mbit =    x +     y  * mp;
 
-                      __u32 color = (x-mx < 0  ||  y-my < 0  ||
+                      u32 color = (x-mx < 0  ||  y-my < 0  ||
                                      x-mx >= stock_cursors[cursor_type].width  ||
                                      y-my >= stock_cursors[cursor_type].height)
                         ? 0x00FFFFFF : (src[bit/8] & (1 << bit%8) ? 0 : 0x00FFFFFF);
 
-		      __u8  a     = color ? 0xE0 : 0xFF;
-                      __u32 alpha = mask[mbit/8] & (1 << mbit%8) ? (a << 24) : 0;
+		      u8  a     = color ? 0xE0 : 0xFF;
+                      u32 alpha = mask[mbit/8] & (1 << mbit%8) ? (a << 24) : 0;
 
                       dst[x + y*pitch] = alpha | color;
                     }
